--- a/Information Asset Registry/src/everything/_db.properties
+++ b/Information Asset Registry/src/everything/_db.properties
@@ -1,6 +1,8 @@
-# rename the file to db.properties
+# create a new file: db.properties
+# right click on package explorer, Team > Ignore
+
 dbUrl = jdbc:mysql://localhost:3306/
-dbName = mydb
+dbName = Information Asset Registry
 dbDriver = com.mysql.jdbc.Driver
 username = root
 password = 
