Improved add() and update()

--- a/Information Asset Registry/src/everything/_db.properties
+++ b/Information Asset Registry/src/everything/_db.properties
@@ -1,5 +1,6 @@
 # create a new file: db.properties
-# right click on package explorer, Team > Ignore
+# don't rename!
+# right click db.properties on package explorer, Team > Ignore
 
 dbUrl = jdbc:mysql://localhost:3306/
 dbName = Information Asset Registry
